Fix vertical alignment on show cards

--- a/src/app/components/show-card/show-card.component.scss
+++ b/src/app/components/show-card/show-card.component.scss
@@ -63,6 +63,6 @@ line-height: 20px;
 
 .mat-icon {
 	vertical-align: middle;
-	margin-bottom: 1%;
-	margin-right: 1%;
+	margin-top: 1px;
+	margin-right: 2px;
 }
